--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-.red{
-    background-color: aqua;
-    color: red;
-    
+#sql{
+    background-color: blue;
+    color: antiquewhite;
 }
-
-
+#pink{
+    color: rgb(141, 249, 150);
+}
 
 
 
