--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 #element{
-    background-color: rgb(174, 229, 239);
+    background-color: rgb(253, 209, 250);
     color:black;
     width: fit-content; 
-   
-   
+    flex-grow: initial;
+   border-radius: 5%;
 }
-
+.submit{
+    background-color: rgb(130, 220, 232);
+}
 
 
 
